# ps3-firmware-update-server

./: .gitignore  README.md  build.gradle
.github/workflows/: build-ps3-helper.yml
ci/vm/: build-ps3-helper-in-vm.sh  ps3-helper-lima.yaml  start-ps3-helper-vm.sh
firmware/: README.md
homebrew/ps3-update-helper/: CMakeLists.txt  Makefile  README.md
homebrew/ps3-update-helper/source/: main.c  plugin.c  ps3_update_client.c  ps3_update_client.h  status_app.c  vsh_prx_compat.S
src/main/groovy/com/pcamposu/ps3/hfwserver/: Ps3HfwUpdateServerApplication.groovy
src/main/groovy/com/pcamposu/ps3/hfwserver/config/: CliConfig.groovy
src/main/groovy/com/pcamposu/ps3/hfwserver/http/controller/: Ps3UpdateController.groovy
src/main/kotlin/com/pcamposu/ps3/hfwserver/gui/: Ps3HfwUpdateServerGui.kt
src/main/resources/: application.properties
